added rackets and ball

--- a/Juego_ping_pong/Juego.resx
+++ b/Juego_ping_pong/Juego.resx
@@ -492,4 +492,10 @@
         gD//2Q==
 </value>
   </data>
+  <metadata name="tmrTiempoActualizar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="tmrTiempoDibujar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>154, 16</value>
+  </metadata>
 </root>
